2006-01-15  Andreas Jaeger  <aj@suse.de>

	[BZ #1950]
	* posix/regex_internal.c (re_string_reconstruct): Adjust for
	build_wcs_upper_buffer change.
	(build_wcs_upper_buffer): Change return type.

	[BZ #2153]
	* math/s_cacosh.c (__cacosh): Do not return a negative
	value. Patch by Wes Loewer <wjltemp-temp01@yahoo.com>.
	* math/s_cacoshl.c (__cacoshl): Likewise.
	* math/s_cacoshf.c (__cacoshf): Likewise.
	* math/libm-test.inc (cacosh_test): Adjust for change.

	* sysdeps/alpha/fpu/libm-test-ulps: Adopt for cacosh test change.
	* sysdeps/hppa/fpu/libm-test-ulps: Likewise.
	* sysdeps/i386/fpu/libm-test-ulps: Likewise.
	* sysdeps/ia64/fpu/libm-test-ulps: Likewise.
	* sysdeps/m68k/fpu/libm-test-ulps: Likewise.
	* sysdeps/mips/fpu/libm-test-ulps: Likewise.
	* sysdeps/powerpc/fpu/libm-test-ulps: Likewise.
	* sysdeps/s390/fpu/libm-test-ulps: Likewise.
	* sysdeps/x86_64/fpu/libm-test-ulps: Likewise.
	* sysdeps/sh/sh4/fpu/libm-test-ulps: Likewise.
	* sysdeps/sparc/sparc32/fpu/libm-test-ulps: Likewise.
	* sysdeps/sparc/sparc64/fpu/libm-test-ulps: Likewise.

	[BZ #2079]
	* libio/fputwc_u.c (fputwc_unlocked): Fix return value.
	* libio/getwc_u.c (__getwc_unlocked): Likewise.
	* libio/wfileops.c (_IO_wdo_write): Likewise.

	[BZ #2078]
	* libio/fputwc.c (fputwc): Use proper type for result.
	* libio/ioungetwc.c (ungetwc): Likewise.

2006-01-14  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/bits/sched.h: Define SCHED_BATCH.

2006-01-14  Roland McGrath  <roland@redhat.com>

	* sysdeps/ieee754/ldbl-opt/nldbl-compat.h (NLDBL_DECL): Don't try
	attribute_hidden here.
	* sysdeps/ieee754/ldbl-opt/nldbl-vsyslog.c (vsyslog): Restore
	attribute_hidden here.
	* sysdeps/ieee754/ldbl-opt/nldbl-asprintf.c (__asprintf): Likewise.
	* sysdeps/ieee754/ldbl-opt/nldbl-fprintf.c (fprintf): Likewise.
	* sysdeps/ieee754/ldbl-opt/nldbl-qecvt.c (qecvt): Likewise.
	* sysdeps/ieee754/ldbl-opt/nldbl-qfcvt.c (qfcvt): Likewise.
	* sysdeps/ieee754/ldbl-opt/nldbl-qgcvt.c (qgcvt): Likewise.
